tests/golden/type_errors/function_type_missing_return.cd
fun make(): fun(number): number {
}
